<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
      <include 
        layout="@layout/boyi_detail_top_title"
        /> 
 
   <ListView
       		android:id="@+id/directory_listview"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:cacheColorHint="#00000000"
            android:divider="@color/boyi_dark_black"
            android:dividerHeight="0.5dp"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"            
            android:smoothScrollbar="true"
   />

   <RelativeLayout 
       android:layout_height="27dip"
       android:layout_width="match_parent"
       android:layout_marginLeft="5dip"
       android:layout_marginBottom="5dip"
       android:layout_marginRight="5dip"
       android:layout_gravity="bottom"
       >
       <Button 
           android:id="@+id/dir_lastpage"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/boyi_search_btn_bg"
           android:text="@string/boyi_dir_last_page"
           android:textColor="@color/boyi_white"
           android:layout_alignParentLeft="true"
           
           />
       
       <LinearLayout 
          android:layout_height="match_parent"
           android:layout_width="match_parent"
           android:minWidth="50dp"
           android:orientation="horizontal"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:gravity="center_vertical|center_horizontal"
           android:layout_toRightOf="@+id/dir_lastpage"
           android:layout_toLeftOf="@+id/dir_nextpage"
           >
       <TextView 
           android:layout_height="match_parent"
           android:layout_width="wrap_content"
           android:text="@string/boyi_dir_jump_page"
           android:gravity="center_vertical"
           />
     
       <TextView 
           android:id="@+id/chose_page"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"   
           android:gravity="center_vertical"  
           android:text="第 1页"
           android:paddingLeft="8dp"
           android:background="@drawable/boyi_search_spiner2"
           />
       </LinearLayout>
       
       <Button 
           android:id="@+id/dir_nextpage"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/boyi_search_btn_bg"
           android:text="@string/boyi_dir_next_page"
           android:textColor="@color/boyi_white"
            android:layout_alignParentRight="true"
           />
       
   </RelativeLayout>

</LinearLayout>