<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
     >
    <include 
        layout="@layout/boyi_common_top_title"
        />
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="#f7f7f7"
        android:visibility="gone"
        >

      <RelativeLayout
          android:id="@+id/store_bottom_bar1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@color/boyi_bottom_bg_yes"
          android:orientation="vertical" >

        <TextView
            android:id="@+id/main_bar_tab1_title"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:text="@string/boyi_main_bottom_bar1"         
              style="@style/main_tab_text_style"
            android:layout_marginTop="4.0dip" 
            />
    
    <View 
        android:id="@+id/bottom_bar1"
        android:layout_height="4.5dip"
        android:layout_width="match_parent"
        android:background="@color/boyi_main_top_bar"
        android:layout_alignParentBottom="true"
        />
 
    </RelativeLayout>
    
   
    <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/boyi_dark_gray"
        android:visibility="gone"
        />

  <RelativeLayout
        android:id="@+id/store_bottom_bar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
              android:id="@+id/main_bar_tab2_title"
            	android:text="@string/boyi_main_bottom_bar2"            
            android:layout_height="wrap_content"
			android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
              style="@style/main_tab_text_style"
            android:layout_marginTop="4.0dip" 
            />
    <View 
        android:id="@+id/bottom_bar2"
        android:layout_height="4.5dip"
        android:layout_width="match_parent"
        android:background="@color/boyi_main_top_bar"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
    </RelativeLayout>
    
   <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/boyi_dark_gray"
        android:visibility="gone"
        />
   
   
  <RelativeLayout
        android:id="@+id/store_bottom_bar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
 
        <TextView
              android:id="@+id/main_bar_tab3_title"
            android:text="@string/boyi_main_bottom_bar3"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"        
              style="@style/main_tab_text_style"
            android:layout_marginTop="4.0dip" 
            android:layout_centerVertical="true"
            />
    <View 
        android:id="@+id/bottom_bar3"
        android:layout_height="4.5dip"
        android:layout_width="match_parent"
        android:background="@color/boyi_main_top_bar"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
    </RelativeLayout>
  

   <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/boyi_dark_gray"
        android:visibility="gone"
        />
   
 <RelativeLayout
        android:id="@+id/store_bottom_bar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
              android:id="@+id/main_bar_tab4_title"
            android:text="@string/boyi_main_bottom_bar4"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
              style="@style/main_tab_text_style"
              android:layout_centerVertical="true"
            android:layout_marginTop="4.0dip" />
    <View 
        android:id="@+id/bottom_bar4"
        android:layout_height="4.5dip"
        android:layout_width="match_parent"
        android:background="@color/boyi_main_top_bar"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
    </RelativeLayout>


   <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@color/boyi_dark_gray"
        android:visibility="gone"
        />
   
    <RelativeLayout
        android:id="@+id/store_bottom_bar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
             android:id="@+id/main_bar_tab5_title"
            android:text="@string/boyi_main_bottom_bar5"
            style="@style/main_tab_text_style"
           android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginTop="4.0dip" />
      <View 
        android:id="@+id/bottom_bar5"
        android:layout_height="4.5dip"
        android:layout_width="match_parent"
        android:background="@color/boyi_main_top_bar"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
    </RelativeLayout>
 

        </LinearLayout >
    <LinearLayout
		   android:layout_width="match_parent"
		   android:layout_height="0dp"	
		   android:layout_weight="14"
		   android:id="@+id/store_main_frg"/>
     <include 
         layout="@layout/boy_bookstore_bottom"
         />
     <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"	
		   android:layout_weight="14"
		   android:id="@+id/store_search_view"
		   android:visibility="gone"
		    >              
    </LinearLayout>
  
   <View 
       android:layout_height="1dip"
       android:layout_width="match_parent"
       android:visibility="gone"
       android:background="@color/boyi_dark_gray"
       />  
    

</LinearLayout>