<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0000000" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout 
        android:background="#ECEBE9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:text="@string/boyi_confirm_exit"
            android:textColor="#474644"
            android:textSize="24sp" />
   </RelativeLayout>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="44dp"
       android:orientation="horizontal"
       >
       <Button
            android:id="@+id/confirm_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" 
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_white_to_blue_selector"
            android:textColor="@color/boyi_white"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/boyi_confirm"/>

        <Button
            android:id="@+id/cancel_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" 
            android:text="@string/boyi_confirm_delete_cancel"
            android:textColor="#474644"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/btn_gray_selector"
            android:layout_marginRight="8dp"/>
   </LinearLayout>
   <TextView 
       
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="16dp"
       android:layout_marginTop="20dp"
       android:textSize="17sp"
       android:textColor="#474644"
       android:text="@string/boyi_exit_tishi"
       />

    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingBottom="17dp">
       <LinearLayout 
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="160dp"
           android:layout_marginRight="15dp"
           android:orientation="vertical">
           <com.boyiqove.library.volley.toolbox.NetworkImageView 
               android:id="@+id/imageview1"
               android:layout_width="match_parent"
               android:layout_height="109dp"
               android:src="@drawable/boyi_addbook"
               />
           <TextView 
               android:id="@+id/bookname1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12.3dp"
               android:gravity="center"
               android:textSize="12sp"
               />
           <TextView 
               android:id="@+id/sum1"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4.7dp"
               />
           
       </LinearLayout>
       <LinearLayout 
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="160dp"
           android:layout_marginRight="15dp"
           android:orientation="vertical">
           <com.boyiqove.library.volley.toolbox.NetworkImageView 
               android:id="@+id/imageview2"
               android:layout_width="match_parent"
               android:layout_height="109dp"
               android:src="@drawable/boyi_addbook"
               />
           <TextView 
               android:id="@+id/bookname2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12.3dp"
               android:gravity="center"
               android:textSize="12sp"
               />
           <TextView 
               android:id="@+id/sum2"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4.7dp"
               />
           
       </LinearLayout>
       <LinearLayout 
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="160dp"
           android:orientation="vertical">
           <com.boyiqove.library.volley.toolbox.NetworkImageView 
               android:id="@+id/imageview3"
               android:layout_width="match_parent"
               android:layout_height="109dp"
               android:src="@drawable/boyi_addbook"
               />
           <TextView 
               android:id="@+id/bookname3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12.3dp"
               android:gravity="center"
               android:textSize="12sp"
               />
           <TextView
               android:id="@+id/sum3" 
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4.7dp"
               />
           
       </LinearLayout>
        
        
    </LinearLayout>
    </LinearLayout>

    

</RelativeLayout>